// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ModalConfirmationDelete /> <TestModalConfirmationDelete /> should render correctly 1`] = `
Array [
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <button
    aria-controls="id-1"
    aria-expanded={false}
    aria-haspopup="dialog"
    className="sc-dEVMhd Button__ButtonInner-dXfNcJ fZwiSH efTBzD"
    onClick={[Function]}
    onClickCapture={[Function]}
    onKeyDown={[Function]}
    onKeyPressCapture={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseDownCapture={[Function]}
    type="button"
  >
    admin.global.delete
  </button>,
  <div
    aria-label="delete-confirmation"
    aria-modal={true}
    data-dialog={true}
    hidden={true}
    id="id-1"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex={-1}
  />,
]
`;

exports[`<ModalConfirmationDelete /> <TestModalConfirmationDelete /> should render modal open 1`] = `
Array [
  <div
    className="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <button
    aria-controls="id-1"
    aria-expanded={true}
    aria-haspopup="dialog"
    className="sc-dEVMhd Button__ButtonInner-dXfNcJ fZwiSH efTBzD"
    onClick={[Function]}
    onClickCapture={[Function]}
    onKeyDown={[Function]}
    onKeyPressCapture={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseDownCapture={[Function]}
    type="button"
  >
    admin.global.delete
  </button>,
  <div
    aria-label="delete-confirmation"
    aria-modal={true}
    data-dialog={true}
    hidden={false}
    id="id-1"
    onAnimationEnd={[Function]}
    onBlur={[Function]}
    onKeyDown={[Function]}
    onTransitionEnd={[Function]}
    role="dialog"
    tabIndex={-1}
  >
    <div
      data-testid="AnimatePresence"
    >
      <div
        className="sc-dEVMhd bjEjhK Modal__ModalContainerInner-gRvBLO"
        onClick={[Function]}
        style={
          Object {
            "opacity": 0,
          }
        }
      >
        <div
          className="sc-dEVMhd fwBdND Modal__ModalInner-fNGFsd"
          style={
            Object {
              "opacity": 0,
              "transform": "translateY(-20px) translateZ(0)",
            }
          }
        >
          <header
            className="sc-dEVMhd Flex___StyledAppBox-SiGEY bGRJMU"
          >
            <div
              className="sc-dEVMhd Flex___StyledAppBox-SiGEY fpKlVH ModalHeader___StyledFlex-hKIJSk eJfkn"
            >
              <h2
                className="sc-dEVMhd ffKkYR"
              >
                delete-confirmation
              </h2>
            </div>
            <button
              className="sc-dEVMhd Button__ButtonInner-dXfNcJ dskxFv iWxcUO"
              onClick={[Function]}
              type="button"
            >
              <IconMock
                className="sc-dEVMhd Icon__IconInner-dszKAZ Icon___StyledIconInner-cDUvPZ bklSCx dpibyo AjyOr icon"
              />
            </button>
          </header>
          <main
            className="sc-dEVMhd Flex___StyledAppBox-SiGEY aMkAC"
          >
            <p
              className="sc-dEVMhd hOWRlb"
            >
              are-you-sure-to-delete-something
            </p>
          </main>
          <footer
            className="sc-dEVMhd Flex___StyledAppBox-SiGEY evqvO frpAOM"
          >
            <div
              className="sc-dEVMhd Flex___StyledAppBox-SiGEY fOAaig crLbTm"
            >
              <button
                className="sc-dEVMhd Button__ButtonInner-dXfNcJ kwWEPD lilFYw"
                onClick={[Function]}
                type="button"
              >
                cancel
              </button>
              <button
                className="sc-dEVMhd Button__ButtonInner-dXfNcJ kwWEPD fjccAb"
                onClick={[Function]}
                type="button"
              >
                global.delete
              </button>
            </div>
          </footer>
        </div>
      </div>
    </div>
  </div>,
]
`;
